# diminutivedeer

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
src/diminutivedeer/: __init__.py  main.py
src/diminutivedeer/indexer/: __init__.py  embedding.py  main.py
src/diminutivedeer/indexer/providers/: __init__.py  claude.py  mock.py  openai.py
tests/: test_embedders.py
